# git-swift

./: .gitignore  Cargo.toml  LICENSE  README.md  ex.txt  main.rs
.github/workflows/: build.yml
app/: Cargo.toml  README.md
app/src/: constants.rs  lib.rs  main.rs
app/src/ai/: generate.rs  mod.rs
app/src/cli/: interface.rs  mod.rs
app/src/git/: mod.rs
git-swift/: Cargo.toml  README.md
git-swift/src/: constants.rs  lib.rs  main.rs
git-swift/src/git/: diff.rs
git-swift/src/utils/: config.rs
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  compile.yml  docker-compose.yml  sample.env
server/src/: errors.rs  lib.rs  main.rs
server/src/routes/: commit_message.rs  mod.rs
src/: lib.rs  main.rs
src/ai/: generate.rs  mod.rs
src/cli/: interface.rs  mod.rs
src/git/: commit.rs
src/utils/: config.rs
