[package]
name = "gitswift"
version = "0.1.0"
edition = "2021"
authors = [
    "Ojas <crestfallenwizard@gmail.com>",
    "Tarush Mohindru <second.author@example.com>",
    "Hushraj Singh <hushraj.singh@ccstiet.com>"
]
license = "MIT"
description = "A Git tool with AI capabilities"
repository = "https://github.com/its-me-ojas/git-swift"


[package.metadata.deb]
maintainer = "Ojas <crestfallenwizard@gmail.com>"
copyright = "Copyright (c) 2025"
license-file = "../LICENSE"
depends = "$auto"
section = "utils"
priority = "optional"

[package.metadata.wix]
eula = "../LICENSE.rtf"

[dependencies]
clap = "4.5.26"
dirs = "5.0.1"
dotenv = "0.15.0"
gemini-rs = "0.4.2"
git2 = "0.20.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
