[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
derive_more = { version = "1.0.0", features = ["from"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
serde_json = "1.0.135"
dotenvy = "0.15.7"
gemini-rs = "0.4.2"
reqwest = { version = "0.12.12", features = ["json"] }
